fixed alignment of all elment

--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -3,15 +3,5 @@
 }
 
 .sidenav {
-  width: 200px;
-}
-
-.sidenav .mat-toolbar {
-  background: inherit;
-}
-
-.mat-toolbar.mat-primary {
-  position: sticky;
-  top: 0;
-  z-index: 1;
+  width: 12%;
 }
